--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  cursor: url("/image/blue-cursor.svg"), auto;
+  cursor: url("image/blue-cursor.svg"), auto;
 }
 
 body a {
-  cursor: url("/image/blue-cursor.svg"), auto;
+  cursor: url("image/blue-cursor.svg"), auto;
 }
 
 #plate {
@@ -22,7 +22,7 @@ body a {
   height: 500px;
   background: pink;
   border-radius: 50%;
-  cursor: url("/image/egg-cursor.svg"), auto;
+  cursor: url("image/egg-cursor.svg"), auto;
 }
 
 .cursor-on {
